--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@ target/
 *.iml
 *.ipr
 
+### Google Cloud Private Data ###
+/tokens/
+/src/main/resources/credentials.json
+/.idea/sonarlint/
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
